--- a/lab/Lab5.Rmd
+++ b/lab/Lab5.Rmd
@@ -24,12 +24,14 @@ library(spotifyr) #API interaction
 library(tidyverse)
 library(tidymodels)
 library(here)
+library(knn)
+library(baguette)
 ```
 
 ```{r}
 # Sourcing API variable
 setwd(here::here())
-#api <- source('keys/keys.R')
+# api <- source('keys/keys.R')
 ```
 
 
@@ -37,37 +39,39 @@ Client ID and Client Secret are required to create and access token that is requ
 
 ```{r access_API}
 
-Sys.setenv(SPOTIFY_CLIENT_ID = '78d73a6f06864c0490376e08f8dc5b50')
-
-Sys.setenv(SPOTIFY_CLIENT_SECRET = 'e8c15bc9620747b9bcd29c1bea994e4e')
-
-authorization_code <- get_spotify_authorization_code(scope = scopes()[c(1:19)]) #sets an authorization code that you'll need to provide for certain get_ functions via my_tracks <- get_my_saved_tracks(authorization = authorization_code)
-
-access_token <- get_spotify_access_token() #takes ID and SECRET, sends to Spotify and receives an access token
+# Sys.setenv(SPOTIFY_CLIENT_ID = '78d73a6f06864c0490376e08f8dc5b50')
+# 
+# Sys.setenv(SPOTIFY_CLIENT_SECRET = 'api')
+# 
+# authorization_code <- get_spotify_authorization_code(scope = scopes()[c(1:19)]) #sets an authorization code that you'll need to provide for certain get_ functions via my_tracks <- get_my_saved_tracks(authorization = authorization_code)
+# 
+# access_token <- get_spotify_access_token() #takes ID and SECRET, sends to Spotify and receives an access token
 ```
 
 **Option 1: Data Preparation**
 
 You can use get_my_saved_tracks() to request all your liked tracks. It would be good if you had at least 150-200 liked tracks so the model has enough data to work with. If you don't have enough liked tracks, you can instead use get_my_recently_played(), and in that case grab at least 500 recently played tracks if you can.
 
-```{r}
+```{r, eval=FALSE}
+## get 50 saved tracks
 my_tracks <- get_my_saved_tracks(authorization = authorization_code, limit = 50)
 ```
 
+```{r, eval=FALSE}
+## get additional 150 saved tracks
 
-change details
-```{r}
+# set offsets for for loop
 offsets = seq(from = 0, to = 150, by = 50)
 
-#initializing an empty df 
+# initialize an empty df 
 my_tracks <- data.frame(matrix(nrow = 0, ncol = 30))
 
 # function to get my 150 most recently liked tracks 
 for (i in seq_along(offsets)) {  
   liked_tracks = get_my_saved_tracks(authorization = authorization_code, limit = 50, 
                                      offset = offsets[i])
-  df_temp = as.data.frame(liked_tracks) # creating a temporary data frame to store the 50 liked tracks from a given run
-  my_tracks <- rbind(my_tracks, df_temp) # binding the temporary data frame to my liked tracks data frame 
+  df_temp = as.data.frame(liked_tracks) # create temporary data frame to store the 50 liked tracks from one iteration
+  my_tracks <- rbind(my_tracks, df_temp) # bind temporary data frame to my liked tracks data frame 
 }
 ```
 
@@ -75,114 +79,163 @@ for (i in seq_along(offsets)) {
 These track audio features are the predictors we are interested in, but this dataframe doesn't have the actual names of the tracks. Append the 'track.name' column from your favorite tracks database.
 
 
-```{r}
+```{r, eval=FALSE}
+# get track audio features and bind into one df
 first100 <- get_track_audio_features(my_tracks$track.id[1:100])
 second100 <- get_track_audio_features(my_tracks$track.id[101:200])
-```
-
-```{r}
 audio_features <- rbind(first100, second100)
-```
 
-```{r}
+# create finalized df of my liked songs with tracks, audio features, and my name
 linus_tracks <- my_tracks %>% 
   select(track.name) %>% 
   cbind(audio_features) %>% 
   mutate(name = "linus")
-```
 
-```{r}
-write.csv(linus_tracks,'linus_tracks.csv', row.names = FALSE)
+# write CSV file to share with partner
+# write.csv(linus_tracks,'linus_tracks.csv', row.names = FALSE)
 ```
 
 
 Find a class mate whose data you would like to use. Add your partner's data to your dataset. Create a new column that will contain the outcome variable that you will try to predict. This variable should contain two values that represent if the track came from your data set or your partner's.
 
 ```{r}
-maxwell_tracks <- read.csv(here::here("lab", "data", "maxwell_songs.csv")) %>% 
-  mutate(name = "maxwell")
-```
+# read in my data (CSV that was previously written)
+linus_tracks <- read.csv(here::here("lab", "data", "maxwell_songs.csv"))
 
-```{r}
+# read in partner data
+maxwell_tracks <- read.csv(here::here("lab", "data", "maxwell_songs.csv")) %>% 
+  mutate(name = "maxwell") %>% 
+
+# bind my liked songs df with partner df
 combined_tracks <- rbind(linus_tracks, maxwell_tracks)
 ```
 
-
-**Option 2: Data preparation**
-
-Download the Spotify dataset from <https://www.kaggle.com/datasets/mrmorj/dataset-of-songs-in-spotify>
-
-Inspect the data. Choose two genres you'd like to use for the classification task. Filter down the data to include only the tracks of that genre.
 
 ###Data Exploration (both options)
 
 Let's take a look at your data. Do some exploratory summary stats and visualization.
 
 ```{r}
-combined_tracks %>% 
-  group_by(name, danceability) %>% 
-  summarise()
+# compare mean energy, instrumentalness, tempo, duration, mode, and valence
+combined_tracks %>%
+  group_by(name) %>%
+  summarise(mean_energy = mean(energy),
+            mean_instrumentalness = mean(instrumentalness),
+            mean_tempo = mean(tempo),
+            mean_duration = mean(duration_ms),
+            mean_mode = mean(mode),
+            mean_valence = mean(valence)) %>% 
+  ungroup()
 ```
 
 
-For example: What are the most danceable tracks in your dataset? What are some differences in the data between users (Option 1) or genres (Option 2)?
+```{r}
+# energy histograms
+Hmisc::histbackback(split(combined_tracks$energy, combined_tracks$name),
+             main = "Spotify liked songs comparison of energy", 
+             ylab = "energy",
+             xlab = c("linus", "maxwell"))
+```
+
+```{r}
+# instrumentalness histograms
+Hmisc::histbackback(split(combined_tracks$instrumentalness, combined_tracks$name),
+             main = "Spotify liked songs comparison of instrumentalness", 
+             ylab = "instrumentalness",
+             xlab = c("linus", "maxwell"))
+```
+
+```{r}
+# tempo histograms
+Hmisc::histbackback(split(combined_tracks$tempo, combined_tracks$name),
+             main = "Spotify liked songs comparison of tempo", 
+             ylab = "tempo",
+             xlab = c("linus", "maxwell"))
+```
+
+```{r}
+# duration histograms
+Hmisc::histbackback(split(combined_tracks$duration_ms, combined_tracks$name),
+             main = "Spotify liked songs comparison of duration", 
+             ylab = "duration (milliseconds)",
+             xlab = c("linus", "maxwell"))
+```
+
+```{r}
+# mode histograms
+Hmisc::histbackback(split(combined_tracks$mode, combined_tracks$name),
+             main = "Spotify liked songs comparison of mode", 
+             ylab = "mode",
+             xlab = c("linus", "maxwell"))
+```
+
+
+```{r}
+# valence histograms
+Hmisc::histbackback(split(combined_tracks$valence, combined_tracks$name),
+             main = "Spotify liked songs comparison of valence", 
+             ylab = "valence",
+             xlab = c("linus", "maxwell"))
+```
+
 
 ### **Modeling**
 
-Create competing models that predict whether a track belongs to:
-
-Option 1. you or your partner's collection
-
-Option 2. genre 1 or genre 2
+Create competing models that predict whether a track belongs to you or your partner's collection
 
 You will eventually create four final candidate models:
 
 1.  k-nearest neighbor (Week 5)
 
-```{r}
-library(kknn)
-```
-
+## preprocessing
 
 ```{r}
+# remove irrelevant columns from combined_tracks df
 combined_tracks <- combined_tracks %>% 
   select(-track.name, -type, -id, -uri, -track_href, -analysis_url)
 ```
 
 
 ```{r}
+# set seed for reproducibility
 set.seed(123)
-#initial split of data, default 75/25
+
+# initial split of data (default 75/25)
 tracks_split <- initial_split(combined_tracks)
 tracks_test <- testing(tracks_split)
 tracks_train <- training(tracks_split)
 ```
 
 ```{r}
-#preprocessing
-knn_recipe <- recipe(name ~ ., data = tracks_train) %>%
+# specify recipe for model preprocessing
+tracks_recipe <- recipe(name ~ ., data = tracks_train) %>%
   step_dummy(all_nominal_predictors()) %>%
   step_normalize(all_numeric_predictors()) %>%
-  prep()
+  prep() # prep recipe
 
-baked_train <- bake(knn_recipe, tracks_train)
+# bake training data using recipe
+baked_train <- bake(tracks_recipe, tracks_train)
 ```
 
 ```{r}
+# Create 10 folds of the training dataset for CV
+cv_folds <- tracks_train %>% vfold_cv(v = 10)
+```
+
+## KNN
+
+```{r}
+# specify KNN model
 knn_spec <- nearest_neighbor(neighbors = tune()) %>%
   set_engine("kknn") %>%
   set_mode("classification")
 ```
 
 ```{r}
+# create workflow
 knn_workflow <- workflow() %>%
   add_model(knn_spec) %>%
   add_recipe(knn_recipe)
-```
-
-```{r}
-# 5-fold CV on the training dataset (instead of 10 for in-class demo)
-cv_folds <- tracks_train %>% vfold_cv(v = 10)
 ```
 
 ```{r}
@@ -193,17 +246,256 @@ fit_knn_cv <-
 ```
 
 ```{r}
+# visualize how error metrics change based on k during CV
 autoplot(fit_knn_cv)
+```
+
+```{r}
+# finalize workflow for training data
+final_wf <- knn_workflow %>%
+  finalize_workflow(select_best(fit_knn_cv, metric= "accuracy")) # select best value of k based on accuracy in CV
+
+# fit finalized workflow to training data
+final_fit <- final_wf %>%
+  fit(data = tracks_train)
+```
+
+```{r}
+# predict testing data
+test_predict_knn <- predict(final_fit, tracks_test) %>% # get prediction probabilities for test 
+  bind_cols(tracks_test) %>%  # bind to testing column
+  mutate(name = as.factor(name))
+```
+
+```{r}
+# visualize confusion matrix for predictions made on testing data
+test_predict_knn %>% 
+  conf_mat(truth = name, estimate = .pred_class) %>% 
+  autoplot(type = "heatmap") +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 30, hjust = 1))
+```
+
+```{r}
+accuracy_knn <- accuracy(test_predict, truth = name, estimate = .pred_class) # get accuracy of testing prediction
+sensitivity_knn <- sensitivity(test_predict, truth = name, estimate = .pred_class)
+specificity_knn <- specificity(test_predict, truth = name, estimate = .pred_class)
 ```
 
 
 2.  decision tree (Week 5)
+
+
+```{r}
+# set up decision tree specification to tell the model that we are tuning hyperparamaters
+tree_spec_tune <- decision_tree(
+  cost_complexity = tune(),
+  tree_depth = tune(),
+  min_n = tune()) %>%
+  set_engine("rpart") %>%
+  set_mode("classification")
+```
+
+```{r}
+tree_grid <- grid_regular(cost_complexity(), tree_depth(), min_n(), levels = 4)
+```
+
+
+```{r}
+wf_tree_tune <- workflow() %>%
+  add_recipe(tracks_recipe) %>%
+  add_model(tree_spec_tune)
+```
+
+
+```{r}
+tree_rs <- tune_grid(tree_spec_tune, 
+                     as.factor(name) ~ ., 
+                     resamples = cv_folds,
+                     grid = tree_grid,
+                     metrics = metric_set(accuracy)
+)
+```
+
+```{r}
+autoplot(tree_rs) + theme_light()
+```
+
+```{r}
+# finalize model specification with optimized hyperparameters
+final_tree <- finalize_model(tree_spec_tune, select_best(tree_rs))
+```
+
+```{r}
+final_tree_fit <- fit(final_tree, as.factor(name)~., tracks_train)
+```
+
+
+```{r}
+# predict testing data
+test_predict_tree <- predict(final_tree_fit, tracks_test) %>% # get prediction probabilities for test 
+  bind_cols(tracks_test) %>%  # bind to testing column
+  mutate(name = as.factor(name))
+```
+
+
+```{r}
+# visualize confusion matrix for predictions made on testing data
+test_predict_tree %>% 
+  conf_mat(truth = name, estimate = .pred_class) %>% 
+  autoplot(type = "heatmap") +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 30, hjust = 1))
+```
+
+```{r}
+accuracy_tree <- accuracy(test_predict, truth = name, estimate = .pred_class) # get accuracy of testing prediction
+sensitivity_tree <- sensitivity(test_predict, truth = name, estimate = .pred_class)
+specificity_tree <- specificity(test_predict, truth = name, estimate = .pred_class)
+```
+
+
 3.  bagged tree (Week 6)
     -   bag_tree()
     -   Use the "times =" argument when setting the engine during model specification to specify the number of trees. The rule of thumb is that 50-500 trees is usually sufficient. The bottom of that range should be sufficient here.
+    
+```{r}
+# specify Bagged Tree model
+bag_tree_spec <- bag_tree() %>%
+  set_engine("rpart", times = 50) %>%
+  set_mode("classification")
+```
+
+```{r}
+# create workflow for Bagged Tree model
+wf_bag_tree <- workflow() %>%
+  add_recipe(tracks_recipe) %>%
+  add_model(bag_tree_spec)
+```
+
+```{r}
+# fit the Bagged Tree model on the training data
+fit_bag_tree <- wf_bag_tree %>%
+  fit(data = tracks_train)
+```
+
+```{r}
+# predict testing data
+test_predict_bag <- predict(fit_bag_tree, tracks_test) %>% # get prediction probabilities for test 
+  bind_cols(tracks_test) %>%  # bind to testing column
+  mutate(name = as.factor(name))
+```
+
+```{r}
+# visualize confusion matrix for predictions made on testing data
+test_predict_bag %>%
+  conf_mat(truth = name, estimate = .pred_class) %>%
+  autoplot(type = "heatmap") +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 30, hjust = 1))
+```
+
+```{r}
+# Evaluate model performance
+accuracy_bag <- accuracy(test_predict, truth = name, estimate = .pred_class) # get accuracy of testing prediction
+sensitivity_bag <- sensitivity(test_predict, truth = name, estimate = .pred_class)
+specificity_bag <- specificity(test_predict, truth = name, estimate = .pred_class)
+```
+
+    
 4.  random forest (Week 6)
     -   rand_forest()
     -   m_try() is the new hyperparameter of interest for this type of model. Make sure to include it in your tuning process
+    
+```{r}
+# specify Random Forest model
+rf_spec <- rand_forest(trees = 500, mtry = tune(), min_n = tune()) %>%
+  set_engine("ranger") %>%
+  set_mode("classification")
+```
+
+```{r}
+# create a tuning grid
+rf_grid <- grid_latin_hypercube(
+  mtry(range = c(2, 4)), 
+  min_n(c(1, 10)),
+  size = 20
+)
+```
+
+    
+```{r}
+# create workflow for Random Forest model
+wf_rf <- workflow() %>%
+  add_recipe(tracks_recipe) %>%
+  add_model(rf_spec)
+```
+
+
+```{r}
+# tune the Random Forest model
+rf_tune_res <- tune_grid(
+  wf_rf,
+  resamples = cv_folds,
+  grid = rf_grid
+)
+```
+
+```{r}
+# visualize the tuning results
+autoplot(rf_tune_res)
+```
+
+```{r}
+# finalize the Random Forest model
+best_rf_params <- select_best(rf_tune_res, "accuracy")
+final_rf <- finalize_model(rf_spec, best_rf_params)
+```
+
+```{r}
+# Assuming best_rf_params contains the best hyperparameters from tuning
+
+# Finalize the model with the best parameters
+final_rf <- finalize_model(rf_spec, best_rf_params)
+
+# Create a new workflow with the finalized model and the existing recipe
+final_rf_workflow <- workflow() %>%
+  add_recipe(tracks_recipe) %>%
+  add_model(final_rf)
+
+# Now, fit this final workflow to the training data
+final_rf_fit <- final_rf_workflow %>%
+  fit(data = tracks_train)
+
+```
+
+
+```{r}
+# predict testing data
+test_predict_rf <- predict(final_rf_fit, tracks_test) %>%
+  bind_cols(tracks_test) %>%
+  mutate(name = as.factor(name))
+
+```
+
+```{r}
+# visualize confusion matrix for predictions made on testing data
+test_predict_rf %>%
+  conf_mat(truth = name, estimate = .pred_class) %>%
+  autoplot(type = "heatmap") +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 30, hjust = 1))
+
+```
+
+```{r}
+# Evaluate model performance
+accuracy_rf <- accuracy(test_predict, truth = name, estimate = .pred_class) # get accuracy of testing prediction
+sensitivity_rf <- sensitivity(test_predict, truth = name, estimate = .pred_class)
+specificity_rf <- specificity(test_predict, truth = name, estimate = .pred_class)
+
+```
+
 
 Go through the modeling process for each model:
 
@@ -216,3 +508,16 @@ Tuning. Find the best values for each hyperparameter (within a reasonable range)
 Compare the performance of the four final models you have created.
 
 Use appropriate performance evaluation metric(s) for this classification task. A table would be a good way to display your comparison. Use at least one visualization illustrating your model results.
+
+```{r}
+# Create a data frame
+metrics_df <- tibble(
+  Method = rep(c("KNN", "Decision Tree", "Bagged Trees", "Random Forest"), each = 3),
+  Metric = rep(c("Accuracy", "Sensitivity", "Specificity"), times = 4),
+  Value = c(accuracy_knn, sensitivity_knn, specificity_knn, 
+            accuracy_dt, sensitivity_dt, specificity_dt,
+            accuracy_bagged, sensitivity_bagged, specificity_bagged,
+            accuracy_rf, sensitivity_rf, specificity_rf)
+)
+```
+
