--- a/lab/Lab5.Rmd
+++ b/lab/Lab5.Rmd
@@ -20,7 +20,7 @@ You have two options for completing this lab.
 **Option 2**: **Classify by genres**. Build models that predict which genre a song belongs to. This will use a pre-existing Spotify dataset available from Kaggle.com (<https://www.kaggle.com/datasets/mrmorj/dataset-of-songs-in-spotify>)
 
 ```{r}
-library(spotifyr) #API interaction
+# library(spotifyr) #API interaction
 library(tidyverse)
 library(tidymodels)
 library(here)
@@ -218,7 +218,7 @@ baked_train <- bake(tracks_recipe, tracks_train)
 ```
 
 ```{r}
-# Create 10 folds of the training dataset for CV
+# create 10 folds of the training dataset for CV
 cv_folds <- tracks_train %>% vfold_cv(v = 10)
 ```
 
@@ -239,7 +239,7 @@ knn_workflow <- workflow() %>%
 ```
 
 ```{r}
-# Fit the workflow on our predefined folds and a grid of hyperparameters
+# fit the workflow on our predefined folds and a grid of hyperparameters
 fit_knn_cv <- 
   knn_workflow %>%
   tune_grid(cv_folds)
@@ -262,12 +262,15 @@ final_fit <- final_wf %>%
 
 ```{r}
 # predict testing data
-test_predict_knn <- predict(final_fit, tracks_test) %>% # get prediction probabilities for test 
+test_predict_knn <- predict(final_fit, tracks_test) %>% 
   bind_cols(tracks_test) %>%  # bind to testing column
   mutate(name = as.factor(name))
 
-test_predict_knn <- predict(final_fit, tracks_test, type = "prob") %>% # get prediction probabilities for test 
-  bind_cols(test_predict_knn)
+# get prediction probabilities for test 
+test_predict_knn <- predict(final_fit, tracks_test, type = "prob") %>%
+  bind_cols(test_predict_knn) %>%  # bind to testing column
+  mutate(name = as.factor(name))
+
 ```
 
 ```{r}
@@ -282,14 +285,11 @@ conf_matrix_knn <- test_predict_knn %>%
 ```
 
 ```{r}
-accuracy_knn <- accuracy(test_predict_knn, truth = name, estimate = .pred_class) # get accuracy of testing prediction
+# store error metrics of testing data predictions
+accuracy_knn <- accuracy(test_predict_knn, truth = name, estimate = .pred_class)
+roc_auc_knn <- roc_auc(test_predict_knn, truth = name, .pred_linus)
 sensitivity_knn <- sensitivity(test_predict_knn, truth = name, estimate = .pred_class)
 specificity_knn <- specificity(test_predict_knn, truth = name, estimate = .pred_class)
-```
-
-```{r}
-
-roc_auc_knn <- roc_auc(test_predict_knn, truth = name, .pred_linus)
 ```
 
 
@@ -307,11 +307,13 @@ tree_spec_tune <- decision_tree(
 ```
 
 ```{r}
+# create grid of hyperparameters
 tree_grid <- grid_regular(cost_complexity(), tree_depth(), min_n(), levels = 4)
 ```
 
 
 ```{r}
+# create workflow with recipe and model
 wf_tree_tune <- workflow() %>%
   add_recipe(tracks_recipe) %>%
   add_model(tree_spec_tune)
@@ -319,6 +321,7 @@ wf_tree_tune <- workflow() %>%
 
 
 ```{r}
+# tune hyperparameters
 tree_rs <- tune_grid(tree_spec_tune, 
                      as.factor(name) ~ ., 
                      resamples = cv_folds,
@@ -328,33 +331,35 @@ tree_rs <- tune_grid(tree_spec_tune,
 ```
 
 ```{r}
+# plot how error metrics change based on hyperparameters
 autoplot(tree_rs) + theme_light()
 ```
 
 ```{r}
 # finalize model specification with optimized hyperparameters
 final_tree <- finalize_model(tree_spec_tune, select_best(tree_rs))
-```
 
-```{r}
+# fit finalized model to training data
 final_tree_fit <- fit(final_tree, as.factor(name)~., tracks_train)
 ```
 
 
 ```{r}
 # predict testing data
-test_predict_tree <- predict(final_tree_fit, tracks_test) %>% # get prediction probabilities for test 
+test_predict_tree <- predict(final_tree_fit, tracks_test) %>%
   bind_cols(tracks_test) %>%  # bind to testing column
   mutate(name = as.factor(name))
 
-test_predict_tree <- predict(final_tree_fit, tracks_test, type = "prob") %>% # get prediction probabilities for test 
-  bind_cols(test_predict_tree)
+# get prediction probabilities for test 
+test_predict_tree <- predict(final_tree_fit, tracks_test, type = "prob") %>%
+  bind_cols(test_predict_tree) %>%  # bind to testing column
+  mutate(name = as.factor(name))
 
 ```
 
 
 ```{r}
-# visualize confusion matrix for predictions made on testing data
+# create confusion matrix for predictions made on testing data
 conf_matrix_tree <- test_predict_tree %>% 
   conf_mat(truth = name, estimate = .pred_class) %>% 
   autoplot(type = "heatmap") +
@@ -365,10 +370,11 @@ conf_matrix_tree <- test_predict_tree %>%
 ```
 
 ```{r}
-accuracy_tree <- accuracy(test_predict_tree, truth = name, estimate = .pred_class) # get accuracy of testing prediction
+# store error metrics of testing data predictions
+accuracy_tree <- accuracy(test_predict_tree, truth = name, estimate = .pred_class)
+roc_auc_tree <- roc_auc(test_predict_tree, truth = name, .pred_linus)
 sensitivity_tree <- sensitivity(test_predict_tree, truth = name, estimate = .pred_class)
 specificity_tree <- specificity(test_predict_tree, truth = name, estimate = .pred_class)
-roc_auc_tree <- roc_auc(test_predict_tree, truth = name, .pred_linus)
 ```
 
 
@@ -377,42 +383,40 @@ roc_auc_tree <- roc_auc(test_predict_tree, truth = name, .pred_linus)
     -   Use the "times =" argument when setting the engine during model specification to specify the number of trees. The rule of thumb is that 50-500 trees is usually sufficient. The bottom of that range should be sufficient here.
     
 ```{r}
-library(baguette)
-```
-
-    
-```{r}
-# specify Bagged Tree model
+# specify bagged tree model
 bag_tree_spec <- bag_tree() %>%
   set_engine("rpart", times = 50) %>%
   set_mode("classification")
 ```
 
 ```{r}
-# create workflow for Bagged Tree model
+# create workflow
 wf_bag_tree <- workflow() %>%
   add_recipe(tracks_recipe) %>%
   add_model(bag_tree_spec)
 ```
 
 ```{r}
-# fit the Bagged Tree model on the training data
+# fit model on the training data
 fit_bag_tree <- wf_bag_tree %>%
   fit(data = tracks_train)
 ```
 
 ```{r}
 # predict testing data
-test_predict_bag <- predict(fit_bag_tree, tracks_test) %>% # get prediction probabilities for test 
+test_predict_bag <- predict(fit_bag_tree, tracks_test) %>% 
   bind_cols(tracks_test) %>%  # bind to testing column
   mutate(name = as.factor(name))
 
-test_predict_bag <- predict(fit_bag_tree, tracks_test, type = "prob") %>% # get prediction probabilities for test
-  bind_cols(test_predict_bag)
+# get prediction probabilities for test
+test_predict_bag <- predict(fit_bag_tree, tracks_test, type = "prob") %>%
+  bind_cols(test_predict_bag) %>%  # bind to testing column
+  mutate(name = as.factor(name))
+
 ```
 
 ```{r}
-# visualize confusion matrix for predictions made on testing data
+# create confusion matrix for predictions made on testing data
 conf_matrix_bag <- test_predict_bag %>%
   conf_mat(truth = name, estimate = .pred_class) %>%
   autoplot(type = "heatmap") +
@@ -423,11 +427,11 @@ conf_matrix_bag <- test_predict_bag %>%
 ```
 
 ```{r}
-# Evaluate model performance
+# store error metrics of testing data predictions
 accuracy_bag <- accuracy(test_predict_bag, truth = name, estimate = .pred_class)
+roc_auc_bag <- roc_auc(test_predict_bag, truth = name, .pred_linus)
 sensitivity_bag <- sensitivity(test_predict_bag, truth = name, estimate = .pred_class)
 specificity_bag <- specificity(test_predict_bag, truth = name, estimate = .pred_class)
-roc_auc_bag <- roc_auc(test_predict_bag, truth = name, .pred_linus)
 ```
 
     
@@ -436,7 +440,7 @@ roc_auc_bag <- roc_auc(test_predict_bag, truth = name, .pred_linus)
     -   m_try() is the new hyperparameter of interest for this type of model. Make sure to include it in your tuning process
     
 ```{r}
-# specify Random Forest model
+# specify RF model
 rf_spec <- rand_forest(trees = 500, mtry = tune(), min_n = tune()) %>%
   set_engine("ranger") %>%
   set_mode("classification")
@@ -453,7 +457,7 @@ rf_grid <- grid_latin_hypercube(
 
     
 ```{r}
-# create workflow for Random Forest model
+# create workflow
 wf_rf <- workflow() %>%
   add_recipe(tracks_recipe) %>%
   add_model(rf_spec)
@@ -461,7 +465,7 @@ wf_rf <- workflow() %>%
 
 
 ```{r}
-# tune the Random Forest model
+# tune the model
 rf_tune_res <- tune_grid(
   wf_rf,
   resamples = cv_folds,
@@ -470,28 +474,26 @@ rf_tune_res <- tune_grid(
 ```
 
 ```{r}
-# visualize the tuning results
+# visualize tuning results
 autoplot(rf_tune_res)
 ```
 
 ```{r}
-# finalize the Random Forest model
+# finalize the model
 best_rf_params <- select_best(rf_tune_res, "accuracy")
 final_rf <- finalize_model(rf_spec, best_rf_params)
 ```
 
 ```{r}
-# Assuming best_rf_params contains the best hyperparameters from tuning
-
-# Finalize the model with the best parameters
+# finalize the model with optimal parameters
 final_rf <- finalize_model(rf_spec, best_rf_params)
 
-# Create a new workflow with the finalized model and the existing recipe
+# create a new workflow with finalized model
 final_rf_workflow <- workflow() %>%
   add_recipe(tracks_recipe) %>%
   add_model(final_rf)
 
-# Now, fit this final workflow to the training data
+# fit final workflow to the training data
 final_rf_fit <- final_rf_workflow %>%
   fit(data = tracks_train)
 
@@ -504,13 +506,15 @@ test_predict_rf <- predict(final_rf_fit, tracks_test) %>%
   bind_cols(tracks_test) %>%
   mutate(name = as.factor(name))
 
-test_predict_rf <- predict(final_rf_fit, tracks_test, type = "prob") %>% # get prediction probabilities for test
-  bind_cols(test_predict_rf)
+ # get prediction probabilities for test
+test_predict_rf <- predict(final_rf_fit, tracks_test, type = "prob") %>%
+  bind_cols(test_predict_rf) %>%
+  mutate(name = as.factor(name))
 ```
 
 
 ```{r}
-# visualize confusion matrix for predictions made on testing data
+# make confusion matrix for predictions made on testing data
 conf_matrix_rf <- test_predict_rf %>%
   conf_mat(truth = name, estimate = .pred_class) %>%
   autoplot(type = "heatmap") +
@@ -522,11 +526,11 @@ conf_matrix_rf <- test_predict_rf %>%
 ```
 
 ```{r}
-# Evaluate model performance
-accuracy_rf <- accuracy(test_predict_rf, truth = name, estimate = .pred_class) # get accuracy of testing prediction
+# store error metrics of testing data predictions
+accuracy_rf <- accuracy(test_predict_rf, truth = name, estimate = .pred_class)
+roc_auc_rf <- roc_auc(test_predict_rf, truth = name, .pred_linus)
 sensitivity_rf <- sensitivity(test_predict_rf, truth = name, estimate = .pred_class)
 specificity_rf <- specificity(test_predict_rf, truth = name, estimate = .pred_class)
-roc_auc_rf <- roc_auc(test_predict_rf, truth = name, .pred_linus)
 ```
 
 
@@ -543,8 +547,8 @@ Compare the performance of the four final models you have created.
 Use appropriate performance evaluation metric(s) for this classification task. A table would be a good way to display your comparison. Use at least one visualization illustrating your model results.
 
 ```{r}
-# Create a data frame
-metrics_df <- tibble(
+# create tibble of accuracy and ROC AUC for all four models
+metrics_tibble <- tibble(
   Method = rep(c("KNN", "Decision Tree", "Bagged Trees", "Random Forest"), times = 2),
   Metric = rep(c("Accuracy", "ROC AUC"), each = 4),
   Value = c(accuracy_knn$.estimate[1], accuracy_tree$.estimate[1],
@@ -555,7 +559,8 @@ metrics_df <- tibble(
 ```
 
 ```{r}
-ggplot(metrics_df, aes(x = Method, y = Value, fill = Metric)) + 
+# create bar plot comparing accuracy and ROC AUC across all four models
+ggplot(metrics_tibble, aes(x = Method, y = Value, fill = Metric)) + 
   geom_bar(stat = "identity", position = position_dodge(width = 0.9)) +
   geom_text(aes(label = sprintf("%.2f", Value),
                 y = Value + 0.02),
@@ -570,9 +575,10 @@ ggplot(metrics_df, aes(x = Method, y = Value, fill = Metric)) +
 
 
 ```{r}
+# display confusion matrices of all four models
 conf_matrix_knn + conf_matrix_tree + conf_matrix_bag + conf_matrix_rf +
   plot_layout(nrow = 2, ncol = 2)
 ```
 
-
+[For predicting whether a song was liked by Maxwell or me, the Random Forest model was the most accurate (82%) and had the largest area under its Receiver Operating Characteristic (ROC) curve (0.90). The KNN and bagged tree models performed the next best, both with an accuracy of 78% and similar areas under their ROC curve (0.86 for KNN and 0.85 for bagged trees). Interestingly, when it came to predicting songs in Maxwell's collection, the KNN model performed the best (79% accuracy) of all four models, as the best overall model, Random Forest, only predicted Maxwell's collection with 76% accuracy. Lastly, our decision tree model performed the worst of all four models, with an accuracy of 74% and area under its ROC curve of 0.76 (both metrics are the lowest of all models).]{style="color:navy;"}
 
